tools/antlr/output/vdmppParser.java
// $ANTLR 3.2 Sep 23, 2009 12:02:23 /Users/ari/Documents/antlr/vdmpp.g 2010-08-05 00:30:50

import org.antlr.runtime.*;
import java.util.Stack;
import java.util.List;
import java.util.ArrayList;
import java.util.Map;
import java.util.HashMap;
import org.antlr.runtime.debug.*;
import java.io.IOException;
public class vdmppParser extends DebugParser {
    public static final String[] tokenNames = new String[] {
        "<invalid>", "<EOR>", "<DOWN>", "<UP>", "SUBCLASS", "CLASS", "IS", "OF", "END", "MAP", "TO", "SEQ", "SET", "VALUES", "TYPES", "INSTANCE", "VARIABLES", "DCOLON", "ASSIGN", "COLON", "SCOLON", "EQ", "LB", "RB", "LP", "RP", "BAR", "LOWER", "UPPER", "CHAR", "DIGIT", "IDENT", "QUOTE", "STRING", "WS"
    };
    public static final int CLASS=5;
    public static final int RB=23;
    public static final int TO=10;
    public static final int RP=25;
    public static final int LP=24;
    public static final int VALUES=13;
    public static final int CHAR=29;
    public static final int SUBCLASS=4;
    public static final int TYPES=14;
    public static final int SET=12;
    public static final int OF=7;
    public static final int EOF=-1;
    public static final int COLON=19;
    public static final int QUOTE=32;
    public static final int DCOLON=17;
    public static final int WS=34;
    public static final int SEQ=11;
    public static final int IS=6;
    public static final int INSTANCE=15;
    public static final int MAP=9;
    public static final int VARIABLES=16;
    public static final int ASSIGN=18;
    public static final int IDENT=31;
    public static final int LB=22;
    public static final int DIGIT=30;
    public static final int LOWER=27;
    public static final int EQ=21;
    public static final int END=8;
    public static final int BAR=26;
    public static final int UPPER=28;
    public static final int STRING=33;
    public static final int SCOLON=20;

    // delegates
    // delegators

    public static final String[] ruleNames = new String[] {
        "invalidRule", "start", "classDefinitionList", "synpred22_vdmpp", 
        "synpred33_vdmpp", "definitionBlock", "synpred10_vdmpp", "type", 
        "synpred19_vdmpp", "synpred11_vdmpp", "fieldList", "document", "synpred25_vdmpp", 
        "synpred24_vdmpp", "synpred1_vdmpp", "synpred34_vdmpp", "synpred12_vdmpp", 
        "synpred6_vdmpp", "synpred27_vdmpp", "classDefinition", "instanceVariable", 
        "synpred18_vdmpp", "synpred30_vdmpp", "typeDefinitions", "synpred20_vdmpp", 
        "valueDefinition", "valueDefinitions", "valueDefinitionList", "instanceVariableDefinitions", 
        "instanceVariableDefinitionList", "synpred29_vdmpp", "synpred7_vdmpp", 
        "synpred16_vdmpp", "synpred17_vdmpp", "synpred14_vdmpp", "synpred32_vdmpp", 
        "synpred13_vdmpp", "synpred15_vdmpp", "synpred2_vdmpp", "synpred4_vdmpp", 
        "synpred26_vdmpp", "synpred5_vdmpp", "synpred23_vdmpp", "definitionList", 
        "synpred28_vdmpp", "synpred31_vdmpp", "synpred9_vdmpp", "synpred21_vdmpp", 
        "synpred3_vdmpp", "typeDefinition", "synpred8_vdmpp", "typeDefinitionList"
    };
     
        public int ruleLevel = 0;
        public int getRuleLevel() { return ruleLevel; }
        public void incRuleLevel() { ruleLevel++; }
        public void decRuleLevel() { ruleLevel--; }
        public vdmppParser(TokenStream input) {
            this(input, DebugEventSocketProxy.DEFAULT_DEBUGGER_PORT, new RecognizerSharedState());
        }
        public vdmppParser(TokenStream input, int port, RecognizerSharedState state) {
            super(input, state);
            DebugEventSocketProxy proxy =
                new DebugEventSocketProxy(this, port, null);
            setDebugListener(proxy);
            try {
                proxy.handshake();
            }
            catch (IOException ioe) {
                reportError(ioe);
            }
        }
    public vdmppParser(TokenStream input, DebugEventListener dbg) {
        super(input, dbg, new RecognizerSharedState());

    }
    protected boolean evalPredicate(boolean result, String predicate) {
        dbg.semanticPredicate(result, predicate);
        return result;
    }


    public String[] getTokenNames() { return vdmppParser.tokenNames; }
    public String getGrammarFileName() { return "/Users/ari/Documents/antlr/vdmpp.g"; }



    // $ANTLR start "start"
    // /Users/ari/Documents/antlr/vdmpp.g:44:1: start : document EOF ;
    public final void start() throws RecognitionException {
        try { dbg.enterRule(getGrammarFileName(), "start");
        if ( getRuleLevel()==0 ) {dbg.commence();}
        incRuleLevel();
        dbg.location(44, 1);

        try {
            // /Users/ari/Documents/antlr/vdmpp.g:44:7: ( document EOF )
            dbg.enterAlt(1);

            // /Users/ari/Documents/antlr/vdmpp.g:44:9: document EOF
            {
            dbg.location(44,9);
            pushFollow(FOLLOW_document_in_start287);
            document();

            state._fsp--;
            if (state.failed) return ;
            dbg.location(44,18);
            match(input,EOF,FOLLOW_EOF_in_start289); if (state.failed) return ;
            dbg.location(44,22);
            if ( state.backtracking==0 ) {
              System.out.println("Document parsed");
            }

            }

        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
        }
        finally {
        }
        dbg.location(45, 2);

        }
        finally {
            dbg.exitRule(getGrammarFileName(), "start");
            decRuleLevel();
            if ( getRuleLevel()==0 ) {dbg.terminate();}
        }

        return ;
    }
    // $ANTLR end "start"


    // $ANTLR start "document"
    // /Users/ari/Documents/antlr/vdmpp.g:47:1: document : ( classDefinitionList | );
    public final void document() throws RecognitionException {
        try { dbg.enterRule(getGrammarFileName(), "document");
        if ( getRuleLevel()==0 ) {dbg.commence();}
        incRuleLevel();
        dbg.location(47, 1);

        try {
            // /Users/ari/Documents/antlr/vdmpp.g:47:9: ( classDefinitionList | )
            int alt1=2;
            try { dbg.enterDecision(1);

            int LA1_0 = input.LA(1);

            if ( (LA1_0==CLASS) ) {
                alt1=1;
            }
            else if ( (LA1_0==EOF) ) {
                alt1=2;
            }
            else {
                if (state.backtracking>0) {state.failed=true; return ;}
                NoViableAltException nvae =
                    new NoViableAltException("", 1, 0, input);

                dbg.recognitionException(nvae);
                throw nvae;
            }
            } finally {dbg.exitDecision(1);}

            switch (alt1) {
                case 1 :
                    dbg.enterAlt(1);

                    // /Users/ari/Documents/antlr/vdmpp.g:47:11: classDefinitionList
                    {
                    dbg.location(47,11);
                    pushFollow(FOLLOW_classDefinitionList_in_document300);
                    classDefinitionList();

                    state._fsp--;
                    if (state.failed) return ;

                    }
                    break;
                case 2 :
                    dbg.enterAlt(2);

                    // /Users/ari/Documents/antlr/vdmpp.g:48:4: 
                    {
                    dbg.location(48,4);
                    if ( state.backtracking==0 ) {
                      System.out.println("empty document");
                    }

                    }
                    break;

            }
        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
        }
        finally {
        }
        dbg.location(49, 2);

        }
        finally {
            dbg.exitRule(getGrammarFileName(), "document");
            decRuleLevel();
            if ( getRuleLevel()==0 ) {dbg.terminate();}
        }

        return ;
    }
    // $ANTLR end "document"


    // $ANTLR start "classDefinitionList"
    // /Users/ari/Documents/antlr/vdmpp.g:51:1: classDefinitionList : classDefinition ( classDefinition )* ;
    public final void classDefinitionList() throws RecognitionException {
        try { dbg.enterRule(getGrammarFileName(), "classDefinitionList");
        if ( getRuleLevel()==0 ) {dbg.commence();}
        incRuleLevel();
        dbg.location(51, 1);

        try {
            // /Users/ari/Documents/antlr/vdmpp.g:52:2: ( classDefinition ( classDefinition )* )
            dbg.enterAlt(1);

            // /Users/ari/Documents/antlr/vdmpp.g:52:4: classDefinition ( classDefinition )*
            {
            dbg.location(52,4);
            pushFollow(FOLLOW_classDefinition_in_classDefinitionList317);
            classDefinition();

            state._fsp--;
            if (state.failed) return ;
            dbg.location(52,20);
            // /Users/ari/Documents/antlr/vdmpp.g:52:20: ( classDefinition )*
            try { dbg.enterSubRule(2);

            loop2:
            do {
                int alt2=2;
                try { dbg.enterDecision(2);

                int LA2_0 = input.LA(1);

                if ( (LA2_0==CLASS) ) {
                    alt2=1;
                }


                } finally {dbg.exitDecision(2);}

                switch (alt2) {
            	case 1 :
            	    dbg.enterAlt(1);

            	    // /Users/ari/Documents/antlr/vdmpp.g:0:0: classDefinition
            	    {
            	    dbg.location(52,20);
            	    pushFollow(FOLLOW_classDefinition_in_classDefinitionList319);
            	    classDefinition();

            	    state._fsp--;
            	    if (state.failed) return ;

            	    }
            	    break;

            	default :
            	    break loop2;
                }
            } while (true);
            } finally {dbg.exitSubRule(2);}


            }

        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
        }
        finally {
        }
        dbg.location(53, 2);

        }
        finally {
            dbg.exitRule(getGrammarFileName(), "classDefinitionList");
            decRuleLevel();
            if ( getRuleLevel()==0 ) {dbg.terminate();}
        }

        return ;
    }
    // $ANTLR end "classDefinitionList"


    // $ANTLR start "classDefinition"
    // /Users/ari/Documents/antlr/vdmpp.g:55:1: classDefinition : ( CLASS nameStart= IDENT END nameEnd= IDENT | CLASS IDENT definitionList END IDENT | CLASS IDENT IS SUBCLASS OF IDENT END IDENT | CLASS IDENT IS SUBCLASS OF IDENT definitionList END IDENT );
    public final void classDefinition() throws RecognitionException {
        Token nameStart=null;
        Token nameEnd=null;

        try { dbg.enterRule(getGrammarFileName(), "classDefinition");
        if ( getRuleLevel()==0 ) {dbg.commence();}
        incRuleLevel();
        dbg.location(55, 1);

        try {
            // /Users/ari/Documents/antlr/vdmpp.g:56:2: ( CLASS nameStart= IDENT END nameEnd= IDENT | CLASS IDENT definitionList END IDENT | CLASS IDENT IS SUBCLASS OF IDENT END IDENT | CLASS IDENT IS SUBCLASS OF IDENT definitionList END IDENT )
            int alt3=4;
            try { dbg.enterDecision(3);

            try {
                isCyclicDecision = true;
                alt3 = dfa3.predict(input);
            }
            catch (NoViableAltException nvae) {
                dbg.recognitionException(nvae);
                throw nvae;
            }
            } finally {dbg.exitDecision(3);}

            switch (alt3) {
                case 1 :
                    dbg.enterAlt(1);

                    // /Users/ari/Documents/antlr/vdmpp.g:56:4: CLASS nameStart= IDENT END nameEnd= IDENT
                    {
                    dbg.location(56,4);
                    match(input,CLASS,FOLLOW_CLASS_in_classDefinition332); if (state.failed) return ;
                    dbg.location(56,19);
                    nameStart=(Token)match(input,IDENT,FOLLOW_IDENT_in_classDefinition336); if (state.failed) return ;
                    dbg.location(56,26);
                    match(input,END,FOLLOW_END_in_classDefinition338); if (state.failed) return ;
                    dbg.location(56,37);
                    nameEnd=(Token)match(input,IDENT,FOLLOW_IDENT_in_classDefinition342); if (state.failed) return ;
                    dbg.location(57,2);
                    if ( state.backtracking==0 ) {
                       System.out.println(nameStart.getText());
                    }

                    }
                    break;
                case 2 :
                    dbg.enterAlt(2);

                    // /Users/ari/Documents/antlr/vdmpp.g:58:4: CLASS IDENT definitionList END IDENT
                    {
                    dbg.location(58,4);
                    match(input,CLASS,FOLLOW_CLASS_in_classDefinition351); if (state.failed) return ;
                    dbg.location(58,10);
                    match(input,IDENT,FOLLOW_IDENT_in_classDefinition353); if (state.failed) return ;
                    dbg.location(58,16);
                    pushFollow(FOLLOW_definitionList_in_classDefinition355);
                    definitionList();

                    state._fsp--;
                    if (state.failed) return ;
                    dbg.location(58,31);
                    match(input,END,FOLLOW_END_in_classDefinition357); if (state.failed) return ;
                    dbg.location(58,35);
                    match(input,IDENT,FOLLOW_IDENT_in_classDefinition359); if (state.failed) return ;

                    }
                    break;
                case 3 :
                    dbg.enterAlt(3);

                    // /Users/ari/Documents/antlr/vdmpp.g:59:4: CLASS IDENT IS SUBCLASS OF IDENT END IDENT
                    {
                    dbg.location(59,4);
                    match(input,CLASS,FOLLOW_CLASS_in_classDefinition364); if (state.failed) return ;
                    dbg.location(59,10);
                    match(input,IDENT,FOLLOW_IDENT_in_classDefinition366); if (state.failed) return ;
                    dbg.location(59,16);
                    match(input,IS,FOLLOW_IS_in_classDefinition368); if (state.failed) return ;
                    dbg.location(59,19);
                    match(input,SUBCLASS,FOLLOW_SUBCLASS_in_classDefinition370); if (state.failed) return ;
                    dbg.location(59,28);
                    match(input,OF,FOLLOW_OF_in_classDefinition372); if (state.failed) return ;
                    dbg.location(59,31);
                    match(input,IDENT,FOLLOW_IDENT_in_classDefinition374); if (state.failed) return ;
                    dbg.location(59,37);
                    match(input,END,FOLLOW_END_in_classDefinition376); if (state.failed) return ;
                    dbg.location(59,41);
                    match(input,IDENT,FOLLOW_IDENT_in_classDefinition378); if (state.failed) return ;

                    }
                    break;
                case 4 :
                    dbg.enterAlt(4);

                    // /Users/ari/Documents/antlr/vdmpp.g:60:4: CLASS IDENT IS SUBCLASS OF IDENT definitionList END IDENT
                    {
                    dbg.location(60,4);
                    match(input,CLASS,FOLLOW_CLASS_in_classDefinition383); if (state.failed) return ;
                    dbg.location(60,10);
                    match(input,IDENT,FOLLOW_IDENT_in_classDefinition385); if (state.failed) return ;
                    dbg.location(60,16);
                    match(input,IS,FOLLOW_IS_in_classDefinition387); if (state.failed) return ;
                    dbg.location(60,19);
                    match(input,SUBCLASS,FOLLOW_SUBCLASS_in_classDefinition389); if (state.failed) return ;
                    dbg.location(60,28);
                    match(input,OF,FOLLOW_OF_in_classDefinition391); if (state.failed) return ;
                    dbg.location(60,31);
                    match(input,IDENT,FOLLOW_IDENT_in_classDefinition393); if (state.failed) return ;
                    dbg.location(60,37);
                    pushFollow(FOLLOW_definitionList_in_classDefinition395);
                    definitionList();

                    state._fsp--;
                    if (state.failed) return ;
                    dbg.location(60,52);
                    match(input,END,FOLLOW_END_in_classDefinition397); if (state.failed) return ;
                    dbg.location(60,56);
                    match(input,IDENT,FOLLOW_IDENT_in_classDefinition399); if (state.failed) return ;

                    }
                    break;

            }
        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
        }
        finally {
        }
        dbg.location(61, 2);

        }
        finally {
            dbg.exitRule(getGrammarFileName(), "classDefinition");
            decRuleLevel();
            if ( getRuleLevel()==0 ) {dbg.terminate();}
        }

        return ;
    }
    // $ANTLR end "classDefinition"


    // $ANTLR start "definitionList"
    // /Users/ari/Documents/antlr/vdmpp.g:63:1: definitionList : definitionBlock ( definitionBlock )* ;
    public final void definitionList() throws RecognitionException {
        try { dbg.enterRule(getGrammarFileName(), "definitionList");
        if ( getRuleLevel()==0 ) {dbg.commence();}
        incRuleLevel();
        dbg.location(63, 1);

        try {
            // /Users/ari/Documents/antlr/vdmpp.g:64:2: ( definitionBlock ( definitionBlock )* )
            dbg.enterAlt(1);

            // /Users/ari/Documents/antlr/vdmpp.g:64:4: definitionBlock ( definitionBlock )*
            {
            dbg.location(64,4);
            pushFollow(FOLLOW_definitionBlock_in_definitionList411);
            definitionBlock();

            state._fsp--;
            if (state.failed) return ;
            dbg.location(64,20);
            // /Users/ari/Documents/antlr/vdmpp.g:64:20: ( definitionBlock )*
            try { dbg.enterSubRule(4);

            loop4:
            do {
                int alt4=2;
                try { dbg.enterDecision(4);

                int LA4_0 = input.LA(1);

                if ( ((LA4_0>=VALUES && LA4_0<=INSTANCE)) ) {
                    alt4=1;
                }


                } finally {dbg.exitDecision(4);}

                switch (alt4) {
            	case 1 :
            	    dbg.enterAlt(1);

            	    // /Users/ari/Documents/antlr/vdmpp.g:0:0: definitionBlock
            	    {
            	    dbg.location(64,20);
            	    pushFollow(FOLLOW_definitionBlock_in_definitionList413);
            	    definitionBlock();

            	    state._fsp--;
            	    if (state.failed) return ;

            	    }
            	    break;

            	default :
            	    break loop4;
                }
            } while (true);
            } finally {dbg.exitSubRule(4);}


            }

        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
        }
        finally {
        }
        dbg.location(65, 2);

        }
        finally {
            dbg.exitRule(getGrammarFileName(), "definitionList");
            decRuleLevel();
            if ( getRuleLevel()==0 ) {dbg.terminate();}
        }

        return ;
    }
    // $ANTLR end "definitionList"


    // $ANTLR start "definitionBlock"
    // /Users/ari/Documents/antlr/vdmpp.g:67:1: definitionBlock : ( valueDefinitions | instanceVariableDefinitions | typeDefinitions );
    public final void definitionBlock() throws RecognitionException {
        try { dbg.enterRule(getGrammarFileName(), "definitionBlock");
        if ( getRuleLevel()==0 ) {dbg.commence();}
        incRuleLevel();
        dbg.location(67, 1);

        try {
            // /Users/ari/Documents/antlr/vdmpp.g:68:2: ( valueDefinitions | instanceVariableDefinitions | typeDefinitions )
            int alt5=3;
            try { dbg.enterDecision(5);

            switch ( input.LA(1) ) {
            case VALUES:
                {
                alt5=1;
                }
                break;
            case INSTANCE:
                {
                alt5=2;
                }
                break;
            case TYPES:
                {
                alt5=3;
                }
                break;
            default:
                if (state.backtracking>0) {state.failed=true; return ;}
                NoViableAltException nvae =
                    new NoViableAltException("", 5, 0, input);

                dbg.recognitionException(nvae);
                throw nvae;
            }

            } finally {dbg.exitDecision(5);}

            switch (alt5) {
                case 1 :
                    dbg.enterAlt(1);

                    // /Users/ari/Documents/antlr/vdmpp.g:68:4: valueDefinitions
                    {
                    dbg.location(68,4);
                    pushFollow(FOLLOW_valueDefinitions_in_definitionBlock426);
                    valueDefinitions();

                    state._fsp--;
                    if (state.failed) return ;

                    }
                    break;
                case 2 :
                    dbg.enterAlt(2);

                    // /Users/ari/Documents/antlr/vdmpp.g:69:4: instanceVariableDefinitions
                    {
                    dbg.location(69,4);
                    pushFollow(FOLLOW_instanceVariableDefinitions_in_definitionBlock431);
                    instanceVariableDefinitions();

                    state._fsp--;
                    if (state.failed) return ;

                    }
                    break;
                case 3 :
                    dbg.enterAlt(3);

                    // /Users/ari/Documents/antlr/vdmpp.g:70:4: typeDefinitions
                    {
                    dbg.location(70,4);
                    pushFollow(FOLLOW_typeDefinitions_in_definitionBlock436);
                    typeDefinitions();

                    state._fsp--;
                    if (state.failed) return ;

                    }
                    break;

            }
        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
        }
        finally {
        }
        dbg.location(71, 2);

        }
        finally {
            dbg.exitRule(getGrammarFileName(), "definitionBlock");
            decRuleLevel();
            if ( getRuleLevel()==0 ) {dbg.terminate();}
        }

        return ;
    }
    // $ANTLR end "definitionBlock"


    // $ANTLR start "valueDefinitions"
    // /Users/ari/Documents/antlr/vdmpp.g:73:1: valueDefinitions : ( VALUES | VALUES valueDefinitionList ( SCOLON )? );
    public final void valueDefinitions() throws RecognitionException {
        try { dbg.enterRule(getGrammarFileName(), "valueDefinitions");
        if ( getRuleLevel()==0 ) {dbg.commence();}
        incRuleLevel();
        dbg.location(73, 1);

        try {
            // /Users/ari/Documents/antlr/vdmpp.g:74:2: ( VALUES | VALUES valueDefinitionList ( SCOLON )? )
            int alt7=2;
            try { dbg.enterDecision(7);

            int LA7_0 = input.LA(1);

            if ( (LA7_0==VALUES) ) {
                int LA7_1 = input.LA(2);

                if ( (LA7_1==IDENT) ) {
                    alt7=2;
                }
                else if ( (LA7_1==EOF||LA7_1==END||(LA7_1>=VALUES && LA7_1<=INSTANCE)) ) {
                    alt7=1;
                }
                else {
                    if (state.backtracking>0) {state.failed=true; return ;}
                    NoViableAltException nvae =
                        new NoViableAltException("", 7, 1, input);

                    dbg.recognitionException(nvae);
                    throw nvae;
                }
            }
            else {
                if (state.backtracking>0) {state.failed=true; return ;}
                NoViableAltException nvae =
                    new NoViableAltException("", 7, 0, input);

                dbg.recognitionException(nvae);
                throw nvae;
            }
            } finally {dbg.exitDecision(7);}

            switch (alt7) {
                case 1 :
                    dbg.enterAlt(1);

                    // /Users/ari/Documents/antlr/vdmpp.g:74:4: VALUES
                    {
                    dbg.location(74,4);
                    match(input,VALUES,FOLLOW_VALUES_in_valueDefinitions448); if (state.failed) return ;

                    }
                    break;
                case 2 :
                    dbg.enterAlt(2);

                    // /Users/ari/Documents/antlr/vdmpp.g:75:4: VALUES valueDefinitionList ( SCOLON )?
                    {
                    dbg.location(75,4);
                    match(input,VALUES,FOLLOW_VALUES_in_valueDefinitions453); if (state.failed) return ;
                    dbg.location(75,11);
                    pushFollow(FOLLOW_valueDefinitionList_in_valueDefinitions455);
                    valueDefinitionList();

                    state._fsp--;
                    if (state.failed) return ;
                    dbg.location(75,31);
                    // /Users/ari/Documents/antlr/vdmpp.g:75:31: ( SCOLON )?
                    int alt6=2;
                    try { dbg.enterSubRule(6);
                    try { dbg.enterDecision(6);

                    int LA6_0 = input.LA(1);

                    if ( (LA6_0==SCOLON) ) {
                        alt6=1;
                    }
                    } finally {dbg.exitDecision(6);}

                    switch (alt6) {
                        case 1 :
                            dbg.enterAlt(1);

                            // /Users/ari/Documents/antlr/vdmpp.g:0:0: SCOLON
                            {
                            dbg.location(75,31);
                            match(input,SCOLON,FOLLOW_SCOLON_in_valueDefinitions457); if (state.failed) return ;

                            }
                            break;

                    }
                    } finally {dbg.exitSubRule(6);}


                    }
                    break;

            }
        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
        }
        finally {
        }
        dbg.location(76, 2);

        }
        finally {
            dbg.exitRule(getGrammarFileName(), "valueDefinitions");
            decRuleLevel();
            if ( getRuleLevel()==0 ) {dbg.terminate();}
        }

        return ;
    }
    // $ANTLR end "valueDefinitions"


    // $ANTLR start "valueDefinitionList"
    // /Users/ari/Documents/antlr/vdmpp.g:78:1: valueDefinitionList : valueDefinition ( SCOLON valueDefinition )* ;
    public final void valueDefinitionList() throws RecognitionException {
        try { dbg.enterRule(getGrammarFileName(), "valueDefinitionList");
        if ( getRuleLevel()==0 ) {dbg.commence();}
        incRuleLevel();
        dbg.location(78, 1);

        try {
            // /Users/ari/Documents/antlr/vdmpp.g:79:2: ( valueDefinition ( SCOLON valueDefinition )* )
            dbg.enterAlt(1);

            // /Users/ari/Documents/antlr/vdmpp.g:79:4: valueDefinition ( SCOLON valueDefinition )*
            {
            dbg.location(79,4);
            pushFollow(FOLLOW_valueDefinition_in_valueDefinitionList469);
            valueDefinition();

            state._fsp--;
            if (state.failed) return ;
            dbg.location(79,20);
            // /Users/ari/Documents/antlr/vdmpp.g:79:20: ( SCOLON valueDefinition )*
            try { dbg.enterSubRule(8);

            loop8:
            do {
                int alt8=2;
                try { dbg.enterDecision(8);

                int LA8_0 = input.LA(1);

                if ( (LA8_0==SCOLON) ) {
                    int LA8_1 = input.LA(2);

                    if ( (LA8_1==IDENT) ) {
                        alt8=1;
                    }


                }


                } finally {dbg.exitDecision(8);}

                switch (alt8) {
            	case 1 :
            	    dbg.enterAlt(1);

            	    // /Users/ari/Documents/antlr/vdmpp.g:79:21: SCOLON valueDefinition
            	    {
            	    dbg.location(79,21);
            	    match(input,SCOLON,FOLLOW_SCOLON_in_valueDefinitionList472); if (state.failed) return ;
            	    dbg.location(79,28);
            	    pushFollow(FOLLOW_valueDefinition_in_valueDefinitionList474);
            	    valueDefinition();

            	    state._fsp--;
            	    if (state.failed) return ;

            	    }
            	    break;

            	default :
            	    break loop8;
                }
            } while (true);
            } finally {dbg.exitSubRule(8);}


            }

        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
        }
        finally {
        }
        dbg.location(80, 2);

        }
        finally {
            dbg.exitRule(getGrammarFileName(), "valueDefinitionList");
            decRuleLevel();
            if ( getRuleLevel()==0 ) {dbg.terminate();}
        }

        return ;
    }
    // $ANTLR end "valueDefinitionList"

